<resources>
    <string name="app_name">Pong</string>
    <string name="title_activity_activity_main">Pong</string>
    <string name="touch_to_play">Touch to play</string>
    <string name="play">Play</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="host_game">Host game</string>
    <string name="join_game">Join game</string>
    <string name="exit">Exit</string>
    <string name="title_activity_activity_host">ActivityHost</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_join">ActivityJoin</string>
    <string name="host_listening">Listening for a player on:</string>
    <string name="swipe_down_to_cancel">Swipe down to cancel</string>
    <string name="not_implemented">Not yet implemented.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
