<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_singleplayer"
        android:icon="@drawable/ic_glass_logo"
        android:title="@string/singleplayer" />

    <item
        android:id="@+id/action_scoreboard"
        android:icon="@drawable/ic_glass_logo"
        android:title="@string/scoreboard" />

    <item
        android:id="@+id/action_multiplayer"
        android:icon="@drawable/ic_glass_logo"
        android:title="@string/multiplayer">

        <menu>
            <item
                android:id="@+id/action_multiplayer_host"
                android:icon="@drawable/ic_glass_logo"
                android:title="@string/host_game" />

            <item
                android:id="@+id/action_multiplayer_join"
                android:icon="@drawable/ic_glass_logo"
                android:title="@string/join_game" />
        </menu>

    </item>

    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_stop"
        android:title="@string/exit" />
</menu>